# optimization

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
gui/: OptimizationGUI.pro  global.cpp  global.hpp  heatmap.cpp  heatmap.hpp  main.cpp  optimizationmain.cpp  optimizationmain.hpp  optimizationmain.ui  optimizationvizwidget.cpp  optimizationvizwidget.h
gui/exprtk/: exprtk_wrapper.cpp  exprtk_wrapper.hpp
math/: constraints.hpp  diff.hpp  optim.hpp  point.hpp  stopping_criteria.hpp
math/basic/: aaboxregion.cpp  aaboxregion.hpp  point.cpp  point.hpp  region.hpp
math/optim/: constraints.hpp  optim.hpp  stopping_criteria.hpp
math/optimization/: optimizer.cpp  optimizer.hpp  stochastic_search.hpp
math/random/: prng.cpp  prng.hpp  random.cpp  random.hpp
optim/: CMakeLists.txt  main.cpp
optim/basic/: aaboxregion.cpp  aaboxregion.hpp  diff.hpp  point.hpp  region.hpp
optim/optimization/: gradient_descent.cpp  gradient_descent.hpp  optimizer.cpp  optimizer.hpp  stochastic_search.cpp  stochastic_search.hpp  stopping_criteria.hpp
optim/random/: prng.hpp  random.hpp
